<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_menu1"
            android:icon="@drawable/img_four_d"
            android:title="@string/menu_item1"/>
        <item
            android:id="@+id/main_menu2"
            android:icon="@drawable/img_four_d"
            android:title="@string/menu_item2"/>
        <item
            android:id="@+id/main_menu3"
            android:icon="@drawable/img_four_d"
            android:title="@string/menu_item3"/>
    </group>
    <group
        android:id="@+id/menu_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_menu4"
            android:icon="@drawable/img_four_d"
            android:title="@string/menu_item4"/>
    </group>
    <group
        android:id="@+id/menu_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main_menu5"
            android:icon="@drawable/img_four_d"
            android:title="@string/menu_item5"/>
    </group>
</menu>