<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_drawer">
<!--  主页界面  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WhiteSmoke"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/main_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include layout="@layout/main_title"/>
        </LinearLayout>

        <!--  这里设置fragment  -->
        <FrameLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_c"/>
        <LinearLayout
            android:id="@+id/main_foot_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/main_menu_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/img_menu"/>
            <RadioGroup
                android:id="@+id/main_radioG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/main_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/main_name1"
                    android:textColor="@drawable/main_text_color"
                    android:background="@color/WhiteSmoke"
                    android:drawableTop="@drawable/img_main_one"/>
                <RadioButton
                    android:id="@+id/main_two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/main_name2"
                    android:textColor="@drawable/main_text_color"
                    android:background="@color/WhiteSmoke"
                    android:drawableTop="@drawable/img_main_two"/>
                <RadioButton
                    android:id="@+id/main_three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/main_name3"
                    android:textColor="@drawable/main_text_color"
                    android:background="@color/WhiteSmoke"
                    android:drawableTop="@drawable/img_main_three"/>
                <RadioButton
                    android:id="@+id/main_four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/main_name4"
                    android:textColor="@drawable/main_text_color"
                    android:background="@color/WhiteSmoke"
                    android:drawableTop="@drawable/img_main_four"/>
            </RadioGroup>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
<!--  侧边栏界面  -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/main_menu_title"
        app:menu="@menu/main_menu"
        app:insetForeground="@android:color/transparent">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_c"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_menu_night"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menu_night"
                android:drawableLeft="@drawable/img_four_d"
                android:background="#00000000"
                android:layout_marginLeft="20dp"
                />
            <Button
                android:id="@+id/main_menu_set"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/img_four_d"
                android:text="@string/menu_set"
                android:background="#00000000"
                android:layout_marginLeft="20dp"
                />
            <Button
                android:id="@+id/main_menu_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_out"
                android:drawableLeft="@drawable/img_four_d"
                android:background="#00000000"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>

